updated config for test run

--- a/packages/realm-backend/realm_config.json
+++ b/packages/realm-backend/realm_config.json
@@ -3,5 +3,6 @@
     "config_version": 20210101,
     "name": "simple-auth",
     "location": "AU",
-    "deployment_model": "LOCAL"
+    "deployment_model": "LOCAL",
+    "environment": "production"
 }
