--- a/packages/realm-backend/realm_config.json
+++ b/packages/realm-backend/realm_config.json
@@ -4,5 +4,5 @@
     "name": "simple-auth",
     "location": "AU",
     "deployment_model": "LOCAL",
-    "environment": "production"
+    "environment": "development"
 }
