updated config to be holistic

--- a/packages/realm-backend/realm_config.json
+++ b/packages/realm-backend/realm_config.json
@@ -1,5 +1,5 @@
 {
-    "app_id": "simple-auth-grnnh",
+    "app_id": "simple-auth-dev-mliqw",
     "config_version": 20210101,
     "name": "simple-auth",
     "location": "AU",
