--- a/packages/realm-backend/functions/config.json
+++ b/packages/realm-backend/functions/config.json
@@ -1,6 +1,6 @@
 [
     {
-        "name": "auth/controller",
+        "name": "controller",
         "private": false,
         "run_as_system": true
     }
